Added items for GG inventory Added open-sound config option Added config reload
Signed-off-by: Joe van der Zwet <me@joezwet.me>

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.fallenflame.core</groupId>
     <artifactId>CustomGG</artifactId>
-    <version>1.0</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>CustomGG</name>
@@ -80,6 +80,16 @@
             <groupId>com.github.FallenFlameMC</groupId>
             <artifactId>FallenUtil</artifactId>
             <version>v1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.pablo67340</groupId>
+            <artifactId>SQLiteLib</artifactId>
+            <version>master</version>
         </dependency>
     </dependencies>
 </project>
