--- a/pom.xml
+++ b/pom.xml
@@ -82,14 +82,9 @@
             <version>v1.1</version>
         </dependency>
         <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20180813</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.pablo67340</groupId>
-            <artifactId>SQLiteLib</artifactId>
-            <version>master</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.41</version>
         </dependency>
     </dependencies>
 </project>
