--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,6 +4,7 @@ main: com.fallenflame.core.customgg.CustomGG
 authors: [JoeZwet]
 description: Allow players to customize their "GG"s
 website: https://fallenflame.com
+database: true
 commands:
   gg:
     usage: /gg
