--- a/build.gradle
+++ b/build.gradle
@@ -14,17 +14,12 @@ repositories {
     }
 
     maven {
-        url = 'https://jitpack.io'
-    }
-
-    maven {
         url = 'http://repo.maven.apache.org/maven2'
     }
 }
 
 dependencies {
-    compile 'com.github.FallenFlameMC:FallenUtil:v1.1'
-    compile 'mysql:mysql-connector-java:5.1.41'
+    implementation 'mysql:mysql-connector-java:5.1.41'
     compileOnly 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
 }
 
